--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,8 +1,9 @@
-.Order{
+.Order {
     width: 80%;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     margin: 10px auto;
-    padding: 10px;
+    padding: 15px;
+    padding-right: 35px;
     box-sizing: border-box;
 }
